# noise-neteasemusic

./: CMakeLists.txt  INSTALL  README.md
cmake/: ValaPrecompile.cmake
debian/: changelog  control  copyright
include/: noise.h
schemas/: CMakeLists.txt
src/: CMakeLists.txt  NeteaseApi.vala  NeteaseCoreApi.vala  NeteaseMusic.vala  NeteaseMusicLibrary.vala  NeteaseView.vala  NeteaseViewWrapper.vala  PreferencesSection.vala  Settings.vala  neteasemusic.plugin
src/schemas/: CMakeLists.txt  edu.sysu.neteasemusic.gschema.xml
src/vapi/: gmp.vapi  nettle.vapi
vapi/: noise.vapi
